<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_v4_mainlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_screen_bg" >

    <RelativeLayout
        android:id="@+id/signup_relativelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/animationImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ap_speak_logo" />

        <RelativeLayout
            android:id="@+id/group_selection_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/animationImages"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/chooseCollege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"               
                android:drawableRight="@drawable/down_arrow"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/chooseCollege"
                android:textColor="@color/apspeak_red"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/sign_in_via_fb_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseCollege"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sign_in_via_fb"
                android:textColor="@color/white" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_in_via_fb_txt"
                android:layout_marginTop="50dp"
                layout="@layout/facebookbtn"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/sign_in_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/group_selection_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/background_light"
                android:visibility="gone" />

            <EditText
                android:id="@+id/apspeak_signin_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/apspeak_edit_text_color"
                android:hint="@string/hint_sign_in"
                android:padding="10dp"
                android:textColor="@color/apspeak_light_red"
                android:visibility="gone" />

            <EditText
                android:id="@+id/apspeak_signin_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/apspeak_edit_text_color"
                android:hint="@string/password"
                android:padding="10dp"
                android:textColor="@color/apspeak_light_red"
                android:visibility="gone" />

            <Button
                android:id="@+id/apspeak_signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/apspeak_light_yellow"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/apspeak_red"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/frgt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />

            <RelativeLayout
                android:id="@+id/footer_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/footer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/ap_govt"
                    android:textColor="@color/apspeak_light_yellow"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/powered_footer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ap_powered"
                    android:textColor="@color/apspeak_light_yellow"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>