<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clear_dialog_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#77777777" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/popup"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/delete_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:textSize="16sp"
            tools:ignore="SelectableText" />

        <TextView
            android:id="@+id/user_inappropriate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/user_inappropriate"
            android:textColor="@color/red"
            android:textSize="16sp"
            tools:ignore="SelectableText" />

        <TextView
            android:id="@+id/flag_inappropriate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/flag_inappropriate"
            android:textColor="@color/blue"
            android:textSize="16sp"
            tools:ignore="SelectableText" />
    </LinearLayout>

</RelativeLayout>