<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clear_dialog_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#77777777" >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/request_background_launch_title"
            android:textColor="@color/title"
            android:textSize="20sp"
            tools:ignore="SelectableText" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/separator" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/yes_button"
                android:layout_width="60dip"
                android:layout_height="40dip"
                android:layout_margin="10dip"
                 android:background="@drawable/button"
                android:padding="10dip"
                android:text="@string/yes"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/no_button"
                android:layout_width="60dip"
                android:layout_height="40dip"
                android:layout_margin="10dip"
                 android:background="@drawable/button"
                android:padding="10dip"
                android:text="@string/no"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>